[gd_scene load_steps=8 format=2]

[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/Assets/GrayLine_7x7.png" type="Texture" id=1]
[ext_resource path="res://PreGameHUDRelated/TutorialHubScreen/SubPanels/TutorialChaptersListPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://PreGameHUDRelated/TutorialHubScreen/TutorialHubScreen.gd" type="Script" id=4]
[ext_resource path="res://PreGameHUDRelated/TutorialHubScreen/SubPanels/TutorialDescriptionPanel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="TutorialHubScreen" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyBackground" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 2

[node name="ContentContainer" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ContentContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 520.0
custom_constants/separation = 20

[node name="ChapterListContainer" type="MarginContainer" parent="ContentContainer/HBoxContainer"]
margin_right = 280.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/HBoxContainer/ChapterListContainer"]
margin_right = 280.0
margin_bottom = 500.0

[node name="Label" type="Label" parent="ContentContainer/HBoxContainer/ChapterListContainer/VBoxContainer"]
margin_left = 63.0
margin_right = 216.0
margin_bottom = 17.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Tutorial Chapters"

[node name="TutorialChaptersListPanel" parent="ContentContainer/HBoxContainer/ChapterListContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 21.0
margin_right = 280.0
margin_bottom = 500.0
rect_min_size = Vector2( 280, 150 )
size_flags_vertical = 3

[node name="DescContainer" type="MarginContainer" parent="ContentContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 920.0
margin_bottom = 500.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/HBoxContainer/DescContainer"]
margin_right = 620.0
margin_bottom = 500.0

[node name="Label" type="Label" parent="ContentContainer/HBoxContainer/DescContainer/VBoxContainer"]
margin_right = 620.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )

[node name="TutorialDescriptionPanel" parent="ContentContainer/HBoxContainer/DescContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 21.0
margin_right = 620.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 180 )
size_flags_vertical = 3
